# aoip-recorder

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  aoip-recorder.c  aoip-recorder.h  ar_config.c  bytestoint.h  rtp.c  socket.c  utils.c  writer.c
test/: Makefile.am  check_config.tc
tests/: Makefile.am  check_config.tc  check_rtp.tc
tests/fixtures/: aoip44.sdp  mono.sdp
